# zk-bbp

./: Cargo.toml  LICENSE  README.md
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: lib.rs
methods/src/: lib.rs  main.rs
