[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
risc0-zkvm = "1"
sha2 = "0.10"
methods = { path = "../methods" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"